# Okra

./: .clang-format  .clang-tidy.txt  .gitignore  .travis.yml  ApprovalTests.v.1.0.0.hpp  CMakeLists.txt  ConsoleApplication1.sln  LICENSE  Okra.h  README.md  TODO.md  appveyor.yml  build-and-test.cmd  build.cmd
.travis/: clang-tidy.sh
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Okra.h  format path for display.cpp  get common root of file paths.cpp  stdafx.h  works with using namespace.cpp  works without using namespace.cpp
Tests/: 1. Discover and run tests.cpp  2. Eventing.cpp  2. Reporting results.cpp  3. Failing tests.cpp  4. Assertions.cpp  4. Eventing.cpp  5. Eventing.cpp  6. Approvals.cpp  6. Data-driven tests.cpp  format path for display.cpp  get common root of file paths.cpp  get elapsed time of test.cpp  works with using namespace.cpp
Tests/Compilation/: suppress defining short names.cpp  works with using namespace.cpp  works without using namespace.cpp
Tests/Listeners/: OStream Listener.cpp  receive test events.cpp
Tests/Results/: get elapsed time of test.cpp  main return value.cpp  report pass or fail.cpp
Tests/_TestHelpers/: ArtificialClock.h
